<resources>

    <string name="app_name">TuDuList</string>
    <string name="btn_new">New Task</string>
    <string name="btn_save_task">Save task</string>
	<string name="new_task">Create a new Task</string>
	<string name="txt_description">Describe your task</string>
	<string name="btn_date">Set Date</string>
	<string name="btn_time">Set Time</string>
	<string name="rd_not_important">Not Important</string>
	<string name="rd_important">Important</string>
	<string name="rd_very_important">Very Important</string>
	<string name="empty_task">Plese, describe your task</string>
	<string name="empty_list_sorry">Sorry :(</string>
	<string name="empty_list_msg">There is no tasks</string>
	<string name="delete_msg">Do you want to delete</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="remember">Remember?</string>
	<string name="lorem">Lorem Ipsum</string>
	<string name="date_demo">10/10/2014</string>
	<string name="listview_click_text">scheduled for</string>
	
</resources>
