<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background" 
    >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textColor="#0C7CC7"/>
    
            
    <EditText
        android:id="@+id/description"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_description"/>
    
    <Button 
        android:id="@+id/btn_date"
        android:onClick="showDateDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:text="@string/btn_date"
        android:textColor="#FFFFFF"
        android:background="#0C7CC7"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical">
        
        <View
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp" 
            android:layout_width="70sp"
        	android:layout_height="70sp"
        	android:background="@drawable/not_important_circle"/>
        
        <View
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp" 
            android:layout_width="70sp"
        	android:layout_height="70sp"
        	android:background="@drawable/important_circle"/>
        
        <View
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp" 
            android:layout_width="70sp"
        	android:layout_height="70sp"
        	android:background="@drawable/very_important_circle"/>
        
    </LinearLayout>               
    <RadioGroup
        android:id="@+id/rd_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="10sp">
       
        <RadioButton 
            android:layout_marginTop="8sp"
            android:id="@+id/rd_not_important"
            android:textSize="25sp"
            android:textColor="#0C7CC7"
            android:text="@string/rd_not_important"
            />
        <RadioButton
            android:layout_marginTop="50sp"
            android:textSize="25sp" 
            android:id="@+id/rd_important"
            android:textColor="#0C7CC7"
            android:text="@string/rd_important"/>
        <RadioButton 
            android:layout_marginTop="50sp"
            android:textSize="25sp"
            android:textColor="#0C7CC7"
            android:id="@+id/rd_very_important"
            android:text="@string/rd_very_important"/>
       
    </RadioGroup>
        
	</LinearLayout>
    
 	
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >
        
        <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5sp"
	        android:layout_marginRight="5sp"
	        android:layout_marginBottom="3sp"
	        android:text="@string/btn_save_task"
	        android:textColor="#FFFFFF"
	        android:layout_gravity="bottom"
	        android:background="#0C7CC7"
	        android:onClick="saveTask"/>
        
    </LinearLayout>
    
</LinearLayout>
















